metadata-classic/objects/Service__c.object
<CustomObject>
    <description>Custom object to store records pertaining to the Pro Assistant, Quoting Service, or Instant Quote Service profiles (e.g., is the Pro active in Quoting service).</description>
    <fields>
        <fullName>AddalineNumber__c</fullName>
        <label>Addaline Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AdminLinkEditUser__c</fullName>
        <description>Formula field to bring over the admin link to directly edit the user in the admin tool.</description>
        <formula>ProAccount__r.AdminLinkEditUser__c</formula>
        <label>Admin Link Edit User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkLoginAsUser__c</fullName>
        <description>Formula that brings over the Admin link to log in as the Pro directly from the Admin tool.</description>
        <formula>ProAccount__r.AdminLinkLoginAsUser__c</formula>
        <label>Admin Link Login As User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkViewService__c</fullName>
        <formula>IF( 
NOT(ISBLANK(sav_available_service_id__c)), 
HYPERLINK(&quot;https://www.thumbtack.com/admin/services/service?sav_available_service_id=&quot;&amp;TEXT(sav_available_service_id__c), &quot;View Service&quot;), 
HYPERLINK(&quot;https://www.thumbtack.com/admin/services&quot;, &quot;Search Service&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Link View Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdminLinkViewUser__c</fullName>
        <description>Formula to bring over the Admin link to view the Pro (user) in the Admin tool.</description>
        <formula>ProAccount__r.AdminLinkViewUser__c</formula>
        <label>Admin Link View User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <description>Pick list whose value describes the frequency in which we bill / invoice the professional.</description>
        <inlineHelpText>Select the appropriate fee billing schedule for the professional.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChurnDetail__c</fullName>
        <description>This is a reason in detail as to why the account churned.</description>
        <label>Churn Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChurnReason__c</fullName>
        <description>These are the reasons why a service was ended</description>
        <label>Churn Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mistakenly Created - Not True Churn</fullName>
                </value>
                <value>
                    <fullName>Merging Locations - Not True Churn</fullName>
                </value>
                <value>
                    <fullName>Closing Business/Location</fullName>
                </value>
                <value>
                    <fullName>Not happy with ROI/Results</fullName>
                </value>
                <value>
                    <fullName>Pricing is too high/dynamic</fullName>
                </value>
                <value>
                    <fullName>Pro Stopped Responding (Drop-off)</fullName>
                </value>
                <value>
                    <fullName>Unresolved Payment</fullName>
                </value>
                <value>
                    <fullName>Unknown User Deletion</fullName>
                </value>
                <value>
                    <fullName>100% Switched to Instant</fullName>
                </value>
                <value>
                    <fullName>Too many scam requests</fullName>
                </value>
                <value>
                    <fullName>MTS Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EncodedServiceID__c</fullName>
        <description>The encoded serviced ID is found in admin on the service in the &apos;Legacy ID:&apos; field.</description>
        <inlineHelpText>The encoded serviced ID is found in admin on the service in the &apos;Legacy ID:&apos; field.</inlineHelpText>
        <label>Service Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date that the pro ended their enrollment in the Pro Assistant program.</description>
        <inlineHelpText>Date that the pro ended their enrollment in the Pro Assistant program.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FreeTrialStatus__c</fullName>
        <formula>IF( 
AND(ISPICKVAL(ProAssistantSubscriptionType__c, &apos;Quoting Service&apos;), (TODAY() &lt;= (StartDate__c + 14))), 
&quot;Active&quot;, 
IF( 
AND(ISPICKVAL(ProAssistantSubscriptionType__c, &apos;Quoting Service&apos;), (TODAY() &gt; (StartDate__c + 14))), 
&quot;Expired&quot;, NULL 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Trial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccount__c</fullName>
        <formula>ProAccount__r.Parent.Name</formula>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricingCalculator__c</fullName>
        <description>Link to the pricing calculator in gdocs.</description>
        <label>Pricing Calculator</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Pro business/name the service is related to.</description>
        <inlineHelpText>The Pro business/name the service is related to.</inlineHelpText>
        <label>Pro Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProAssistInitialJobCommission__c</fullName>
        <description>Percent of commission we charge the pro.</description>
        <label>Pro Assist Initial Job Commission %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProAssistRepeatJobCommission__c</fullName>
        <description>The commission percent charged to Pro for any repeat lead jobs.</description>
        <label>Pro Assist Repeat Job Commission %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProAssistantEmail__c</fullName>
        <description>Specific email address created for each Pro Account that the Pro Assistant used as the TT email.</description>
        <inlineHelpText>DO NOT CHANGE THIS EMAIL ADDRESS. IT MUST END WITH: @yourpromail.com- Otherwise requests will not be created</inlineHelpText>
        <label>Pro&apos;s Gmail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProAssistantFee__c</fullName>
        <description>Fee for pro assistance service.</description>
        <inlineHelpText>The fee charged to the pro for the pro assist program subscription.</inlineHelpText>
        <label>Pro Assistant Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProAssistantManagedBy__c</fullName>
        <description>These values describes who is managing the pro assistant program for this account.</description>
        <label>Pro Assistant Managed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thumbtack TSL</fullName>
                </value>
                <value>
                    <fullName>Hourwise</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProAssistantMessaging__c</fullName>
        <description>Open text area to store information about the Pro messaging practices and policies; used for the Pro Assistant Labs project.</description>
        <label>Pro Assistant Messaging</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProAssistantNotes__c</fullName>
        <description>Open text area that allows the Pro Assistant to enter general notes for assisting the Pro (Schedule, Pricing, Service Area, Preferences, bid/pass criteria, etc.)</description>
        <inlineHelpText>Enter pertinent notes for assisting the Pro (schedule, pricing, service area, preferences, bid/pass criteria, etc.)</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProAssistantPricing__c</fullName>
        <description>Open text area to store information about the Pro&apos;s pricing practices and policies; used for the Pro Assistant Labs project.</description>
        <label>Pro Assistant Pricing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProAssistantSubscriptionType__c</fullName>
        <description>The subscription type the Pro has enrolled in.</description>
        <inlineHelpText>The subscription type the Pro has enrolled in.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instant Match</fullName>
                </value>
                <value>
                    <fullName>Instant Match and Quoting Service</fullName>
                </value>
                <value>
                    <fullName>Instant Match Early Enrollment</fullName>
                </value>
                <value>
                    <fullName>Quoting Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Thumbtack.com staff personnel who is assigned to be the Pro&apos;s assistant through the Pro Assistance Lab project.</description>
        <label>Pro Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuotingServiceStatus__c</fullName>
        <label>Quoting Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ON</fullName>
                </value>
                <value>
                    <fullName>OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Date that the pro enrolled in the Pro Assistant program.</description>
        <inlineHelpText>Date that the pro enrolled in the Pro Assistant program.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEMPAccountSubscriptionType__c</fullName>
        <formula>TEXT(ProAccount__r.ProAssistantSubscriptionType__c)</formula>
        <label>TEMP Account Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMPMismatch__c</fullName>
        <formula>IF( ISBLANK(TEMPAccountSubscriptionType__c),False,
IF( TEMPAccountSubscriptionType__c  &lt;&gt; TEXT( ProAssistantSubscriptionType__c ),True,False))</formula>
        <label>TEMP Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserIDFlag__c</fullName>
        <formula>IF (ThumbtackUserID__c = ThumbtackUserIDReference__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thumbtack User ID Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserIDReference__c</fullName>
        <description>Thumbtack User ID that is populated by the Service trigger. This field is used to reference the TT ID that is populated by the user.</description>
        <label>Thumbtack User ID Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserID__c</fullName>
        <description>This field will be updated by the user upon creation of the service record.</description>
        <label>Thumbtack User ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_available_service_id__c</fullName>
        <externalId>true</externalId>
        <label>Service ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sav_is_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sav_notifications_phn_phone_number_id__c</fullName>
        <label>Notifications Phone Number ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_phn_phone_number_id__c</fullName>
        <label>Phone Number ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_title__c</fullName>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sav_travel_dist__c</fullName>
        <label>Travel Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_usr_user_id__c</fullName>
        <label>User ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sav_web_website_id__c</fullName>
        <label>Website ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usa_address1__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usa_city__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usa_state__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usa_usr_user_id__c</fullName>
        <externalId>true</externalId>
        <label>Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usa_zip_code_id__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>usr_email_is_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Is Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>usr_first_name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_is_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Is Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>usr_is_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>usr_last_name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usr_lastlogin_time__c</fullName>
        <label>Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>usr_phn_phone_number__c</fullName>
        <description>The phone number the pro assistant uses on behalf of the Pro.
Help Text</description>
        <inlineHelpText>The phone number the pro assistant uses on behalf of the Pro.
Help Text</inlineHelpText>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>usr_signup_date__c</fullName>
        <label>Sign Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>usr_timezone__c</fullName>
        <label>Timezone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>AllProAssistantPros</fullName>
        <columns>NAME</columns>
        <columns>ProAccount__c</columns>
        <columns>ProAssistant__c</columns>
        <columns>ProAssistantEmail__c</columns>
        <columns>ProAssistantSubscriptionType__c</columns>
        <columns>ProAssistantManagedBy__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>BillingFrequency__c</columns>
        <columns>ProAssistInitialJobCommission__c</columns>
        <columns>ProAssistRepeatJobCommission__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service__c.Pro_Assistance_Service</value>
        </filters>
        <label>03. All Pro Assistant Pro&apos;s</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AuditNoEncodedId</fullName>
        <columns>usr_first_name__c</columns>
        <columns>usr_last_name__c</columns>
        <columns>NAME</columns>
        <columns>EncodedServiceID__c</columns>
        <columns>sav_available_service_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EncodedServiceID__c</field>
            <operation>equals</operation>
        </filters>
        <label>Audit: No Encoded Id</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FullProAssistantPros</fullName>
        <columns>NAME</columns>
        <columns>ProAccount__c</columns>
        <columns>ProAssistant__c</columns>
        <columns>ProAssistantEmail__c</columns>
        <columns>ProAssistantManagedBy__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>ProAssistInitialJobCommission__c</columns>
        <columns>ProAssistRepeatJobCommission__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service__c.Pro_Assistance_Service</value>
        </filters>
        <filters>
            <field>ProAssistantSubscriptionType__c</field>
            <operation>equals</operation>
            <value>Full Pro Assistant</value>
        </filters>
        <label>02. Full Pro Assistant Pro&apos;s</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QuotingServicePros</fullName>
        <columns>NAME</columns>
        <columns>QuotingServiceStatus__c</columns>
        <columns>ProAccount__c</columns>
        <columns>ProAssistant__c</columns>
        <columns>ProAssistantEmail__c</columns>
        <columns>ProAssistantManagedBy__c</columns>
        <columns>PricingCalculator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service__c.Pro_Assistance_Service</value>
        </filters>
        <filters>
            <field>ProAssistantSubscriptionType__c</field>
            <operation>equals</operation>
            <value>Quoting Team Only</value>
        </filters>
        <label>01. Quoting Service Pro&apos;s</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SAM_Managing_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ServicesCreatedThisMonth</fullName>
        <columns>NAME</columns>
        <columns>ProAssistantSubscriptionType__c</columns>
        <columns>FreeTrialStatus__c</columns>
        <columns>QuotingServiceStatus__c</columns>
        <columns>PricingCalculator__c</columns>
        <columns>ProAssistantEmail__c</columns>
        <columns>ProAccount__c</columns>
        <columns>sav_available_service_id__c</columns>
        <columns>EncodedServiceID__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>ThumbtackUserID__c</columns>
        <columns>sav_usr_user_id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service__c.Pro_Assistance_Service</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>X - Services Created THIS MONTH</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Systems_Audit</fullName>
        <columns>NAME</columns>
        <columns>ProAccount__c</columns>
        <columns>ProAssistant__c</columns>
        <columns>ProAssistantSubscriptionType__c</columns>
        <columns>TEMPAccountSubscriptionType__c</columns>
        <columns>TEMPMismatch__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service__c.Pro_Assistance_Service</value>
        </filters>
        <label>X - Systems Audit</label>
        <sharedTo>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Service Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <recordTypes>
        <fullName>Pro_Assistance_Service</fullName>
        <active>true</active>
        <description>Record type used to manage the services for Pro&apos;s who are enrolled in the Pro Assistance or Quoting Service programs.</description>
        <label>Pro Assistance Service</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>RequireChurnReason</fullName>
        <active>true</active>
        <description>Enter a Churn Reason and End Date if either field populated</description>
        <errorConditionFormula>AND( $User.ProfileId != &quot;00ei00000011y4A&quot;, 
IF(ISBLANK(EndDate__c), 0, 1) + 
IF(ISBLANK(TEXT(ChurnReason__c)), 0, 1) == 1 )</errorConditionFormula>
        <errorDisplayField>ChurnReason__c</errorDisplayField>
        <errorMessage>Please complete End Date and Churn Reason before saving this record.</errorMessage>
    </validationRules>
</CustomObject>